# spinwaves

./: .gitignore  CITATION.cff  README.md  lufeo.py  pkg_structure.drawio  pyproject.toml  run-spinW-tutorials.py  setup.py  setup.py.bak  spinwaves_app.py  swgui.py  sws_script.py  test-main.py  test-plotting.py  vispy_testing.py
FeV2O4/: FeV2O4-crystal.vesta  FeV2O4-magnetic.vesta  FeV2O4_1.cif  FeV2O4_1.ins  FeV2O4_1ms.cif  FigureS1.eps  README.md  fvo.py
LuFeO3/: README.md  fit_report-J1.md  fit_report-J12.md  fit_report-J1_D0.md  fit_report-Jall.md  lufeo.py  report.md
LuFeO3/data/: AG-CF Crazy Scan Q points.txt  AG-CF-4p5.txt  AG-CF-5p5.txt  HScan_LuFeO3_Taipan_R.txt  HmHScan_LuFeO3_Taipan_R.txt  LScan_LuFeO3_Taipan_R.txt  LuFeO3_Fitted_Kscan_EIGER.txt  LuFeO3_Fitted_Lscan_EIGER.txt
iframe_figures/: figure_0.html
spinW-source/: spinwave.m
spinwaves/: __init__.py  arrow-test.py  atom.py  coupling.py  crystal.py  data_containers.py  functions.py  lattice.py  magnetic_symmetry.py  plotting-pyspinw.py  plotting.py  plotting_pyspinw.py  spinw.py  structure.py  unitcell.py
spinwaves.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spinwaves/databases/: __init__.py  database.py  implement_spglib.py  implement_txt.py
spinwaves/gui/: __init__.py  gui_plotly.py  gui_qtgraph.py  gui_vispy.py  main.py
spinwaves/plotting/: __init__.py  plotting_vispy.py  supercell_plotter.py  (+6 more)
tests/: test_crystal.py  test_functions.py  test_group  test_group.py  test_magnetic_symmetry.py  test_spinw.py  test_types.py  test_utils_arrays.py
theory/: rotations.ipynb
(+15 files in other folders)
